tests/snapshots/e2e__feature_tests__basic__Fish.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
fnm env | source
fnm install v8.11.3
fnm use v8.11.3
if test (node -v) != "v8.11.3"
    echo 'Expected Node version to be "v8.11.3", Got: '(node -v)
    exit 1
end
